--- a/template/index.html
+++ b/template/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head prefix="og:http://ogp.me/ns#">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Qman's Diary</title>
@@ -16,6 +16,11 @@
     <link rel="stylesheet" href="/assets/css/index.css">
     <script src="/assets/js/latest_articles.js"></script>
     <script src="/assets/js/categories.js"></script>
+    <meta property="og:title" content="Qman's Diary">
+    <meta property="og:description" content="キューマン・エノビクトによるブログです。">
+    <meta property="og:url" content="https://blog.qmainconts.dev{{if eq .PrevPage 0}}{{.Root}}{{else}}{{.Root}}page/{{sub .NextPage 1}}{{end}}">
+    <meta property="og:type" content="blog">
+    <meta property="og:site_name" content="Qman's Diary">
 </head>
 
 <body>
@@ -30,7 +35,8 @@
                     <div class="date">{{formatTime .PublishedAt}}</div>
                     <div class="title"><a href="/articles/{{.ID}}.html">{{.Title}}</a></div>
                     <div class="tags">
-                        <div class="tag"><img src="/assets/tag.svg" alt="タグ" width="18" height="18"></div>{{range .Category}}
+                        <div class="tag"><img src="/assets/tag.svg" alt="タグ" width="18" height="18"></div>{{range
+                        .Category}}
                         <div class="tag"><a href="/articles/category/{{.ID}}"></a>{{.Name}}</div>{{end}}
                     </div>{{$bodyfirst := index .Body 0}}{{trimSample $bodyfirst.Body}}
                 </div>{{end}}{{if totalGreater .Totalcount .Limit}}
