--- a/template/assets/css/article.css
+++ b/template/assets/css/article.css
@@ -6,6 +6,12 @@
     margin: 10px 0;
 }
 
+@media screen and (max-width: 1100px) {
+    #maincol h1 {
+        font-size: 1.6em;
+    }
+}
+
 .tags {
     margin: 5px 0;
 }
