--- a/template/article.html
+++ b/template/article.html
@@ -20,7 +20,7 @@
     <script src="/assets/js/latest_articles.js"></script>
     <script src="/assets/js/categories.js"></script>
     <script src="/assets/js/tweet.js"></script>
-    <meta property="og:title" content="{{.Title}} | Qman's Diary">
+    <meta property="og:title" content="{{.Title}} - Qman's Diary">
     <meta property="og:description" content="{{$bodyfirst := index .Body 0}}{{trimSample $bodyfirst.Body}}">
     <meta property="og:url" content="https://blog.qmainconts.dev/articles/{{.ID}}.html">
     <meta property="og:type" content="article">
