--- a/template/assets/css/article.css
+++ b/template/assets/css/article.css
@@ -42,6 +42,9 @@
 code {
     background-color: #333;
     color: #eee;
+    padding: 2px;
+    margin: 0 2px;
+    border-radius: 4px;
 }
 
 /* ツイートボタン */
