ツイートボタンを公式のものに置き換え

--- a/template/article.html
+++ b/template/article.html
@@ -19,7 +19,6 @@
     <script>hljs.highlightAll();</script>
     <script src="/assets/js/latest_articles.js"></script>
     <script src="/assets/js/categories.js"></script>
-    <script src="/assets/js/tweet.js"></script>
     <meta property="og:title" content="{{.Title}} - Qman's Diary">
     <meta property="og:description" content="{{$bodyfirst := index .Body 0}}{{trimSample $bodyfirst.Body}}">
     <meta property="og:url" content="https://blog.qmainconts.dev/articles/{{.ID}}.html">
@@ -43,7 +42,9 @@
                     <div class="tag"><a href="category/{{.ID}}"></a>{{.Name}}</div>{{end}}
                 </div>
                 <article id="atcbody">{{range $bodies := .Body}}{{$bodies.Body}}{{end}}</article>
-                <img class="tweetbutton" src="/assets/Twitter.svg" width="32" alt="ツイートする" onclick="tweet();"></img>
+                <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large"
+                    data-lang="ja" data-show-count="false">Tweet</a>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </section>
         </section>
         <section id="subcol">
