--- a/template/index.html
+++ b/template/index.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <section id="maincol">
-            <section class="box">{{range .Contents}}
+            <section class="box">{{range .Articles}}
                 <div class="article">
                     <div class="date">{{formatTime .PublishedAt}}</div>
                     <div class="title"><a href="/articles/{{.ID}}.html">{{.Title}}</a></div>
