Recent Articlesの移動、ツイートの追加

--- a/template/article.html
+++ b/template/article.html
@@ -46,6 +46,12 @@
                     data-lang="ja" data-show-count="false">Tweet</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </section>
+            <section class="box">
+                <section class="widgetgroup" id="recent">
+                    <div class="widgetindex">Recent Articles</div>
+                    <div id="recent-articles"></div>
+                </section>
+            </section>
         </section>
         <section id="subcol">
             <section class="box">
@@ -70,14 +76,14 @@
                         <li>Zenn: <a href="https://zenn.dev/kjumanenobikto" target="_blank">@kjumanenobikto</a></li>
                     </ul>
                 </section>
-                <section class="widgetgroup" id="recent">
-                    <div class="widgetindex">Recent Articles</div>
-                    <div id="recent-articles"></div>
-                </section>
                 <section class="widgetgroup">
                     <div class="widgetindex">Category</div>
                     <div id="categorydisplay">
                     </div>
+                </section>
+                <section class="widgetgroup">
+                    <div class="widgetindex">Tweets</div>
+                    <a class="twitter-timeline" href="https://twitter.com/QmanEnobikto?ref_src=twsrc%5Etfw">Tweets by QmanEnobikto</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
                 </section>
             </section>
         </section>
