--- a/template/index.html
+++ b/template/index.html
@@ -49,6 +49,12 @@
                     </div>{{end}}
                 </div>{{end}}
             </section>
+            <section class="box">
+                <section class="widgetgroup" id="recent">
+                    <div class="widgetindex">Recent Articles</div>
+                    <div id="recent-articles"></div>
+                </section>
+            </section>
         </section>
         <section id="subcol">
             <section class="box">
@@ -71,12 +77,12 @@
                     </ul>
                 </section>
                 <section class="widgetgroup">
-                    <div class="widgetindex">Recent Articles</div>
-                    <div id="recent-articles"></div>
-                </section>
-                <section class="widgetgroup">
                     <div class="widgetindex">Category</div>
                     <div id="categorydisplay"></div>
+                </section>
+                <section class="widgetgroup">
+                    <div class="widgetindex">Tweets</div>
+                    <a class="twitter-timeline" href="https://twitter.com/QmanEnobikto?ref_src=twsrc%5Etfw">Tweets by QmanEnobikto</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
                 </section>
             </section>
         </section>
