shorten twitter widg4et

--- a/template/index.html
+++ b/template/index.html
@@ -82,7 +82,7 @@
                 </section>
                 <section class="widgetgroup">
                     <div class="widgetindex">Tweets</div>
-                    <a class="twitter-timeline" href="https://twitter.com/QmanEnobikto?ref_src=twsrc%5Etfw">Tweets by QmanEnobikto</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+                    <a class="twitter-timeline" data-height="1000" href="https://twitter.com/QmanEnobikto?ref_src=twsrc%5Etfw">Tweets by QmanEnobikto</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
                 </section>
             </section>
         </section>
