--- a/template/preview.html
+++ b/template/preview.html
@@ -30,6 +30,8 @@
             });
             article.body.forEach(e => document.getElementById("atcbody").innerHTML += e.body);
         }
+
+        getArticle();
     </script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
