--- a/template/preview.html
+++ b/template/preview.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/assets/css/common.css">
     <link rel="stylesheet" href="/assets/css/article.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/vs2015.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
     <script>
         async function getArticle() {
             const article = await (await fetch("https://blog-wrap.qmc.workers.dev/" + location.search)).json();
@@ -29,11 +30,12 @@
                 text.innerText = e.name;
             });
             article.body.forEach(e => document.getElementById("atcbody").innerHTML += e.body);
+
+            hljs.highlightAll(); // highlight
         }
 
         getArticle();
     </script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
     <script src="/assets/js/latest_articles.js"></script>
     <script src="/assets/js/categories.js"></script>
 </head>
@@ -103,7 +105,6 @@
         <p>当ホームページに記載されている会社名・製品名・システム名などは、各社の登録商標、もしくは商標です。</p>
         <p>© 2022 Kjuman Enobikto All rights reserved.</p>
     </footer>
-    <script>hljs.highlightAll();</script>
 </body>
 
 </html>
