--- a/template/404.html
+++ b/template/404.html
@@ -10,9 +10,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Play:wght@700&&family=Source+Code+Pro&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/destyle.css">
-    <link rel="stylesheet" href="./assets/css/common.css">
-    <link rel="stylesheet" href="./assets/css/article.css">
+    <link rel="stylesheet" href="/assets/css/destyle.css">
+    <link rel="stylesheet" href="/assets/css/common.css">
+    <link rel="stylesheet" href="/assets/css/article.css">
     <script src="/assets/js/latest_articles.js"></script>
     <script src="/assets/js/categories.js"></script>
     <meta property="og:title" content="404 Not Found | Qman's Diary">
