--- a/template/404.html
+++ b/template/404.html
@@ -32,7 +32,7 @@
                 <div class="date">2404-04-04</div>
                 <h1 id="articletitle">404 Not Found</h1>
                 <div class="tags">
-                    <div class="tag"><img src="./assets/tag.svg" alt="タグ" width="18" height="18"></div>
+                    <div class="tag"><img src="/assets/tag.svg" alt="タグ" width="18" height="18"></div>
                     <div class="tag"><a href="#"></a>エラー</div>
                     <div class="tag"><a href="#"></a>404</div>
                 </div>
