--- a/template/assets/css/article.css
+++ b/template/assets/css/article.css
@@ -3,6 +3,7 @@
 #maincol h1 {
     font-size: 2em;
     margin: 10px 0;
+    line-height: 1.4;
 }
 
 @media screen and (max-width: 1100px) {
@@ -23,7 +24,7 @@
 
 #maincol h2 {
     font-size: 1.5em;
-    margin: 40px 0 10px;
+    margin: 30px 0 10px;
 }
 
 #maincol h3 {
