--- a/template/preview.html
+++ b/template/preview.html
@@ -39,7 +39,7 @@
                 if (articleBody[i].tagName === "DIV" && articleBody[i].hasAttribute("data-filename")) {
                     let filename = articleBody[i].getAttribute("data-filename");
                     let filenameBlock = articleBody[i].insertAdjacentElement("beforebegin", document.createElement("div"));
-                    filenameBlock.className = "filename";
+                    filenameBlock.className = "code-filename";
                     filenameBlock.innerText = filename;
                     articleBody[i].classList.add("codeblock-margin");
                     articleBody[i].firstElementChild.style.borderRadius = "0 20px 20px";
