--- a/template/preview.html
+++ b/template/preview.html
@@ -31,23 +31,6 @@
             });
             article.body.forEach(e => document.getElementById("atcbody").innerHTML += e.body);
 
-            // レンダリング完了後実行する部分
-            const articleBody = document.getElementById("atcbody").children;
-            for (let i = 0; i < articleBody.length; i++) {
-                // DIVかつdata-filename属性を持つ場合、中のPREの前(一番先頭)にファイル名ブロックを追加し、divにcodeblock-marginクラスを付与
-                // 中のCODEのborder-radiusを0 20px 20pxにする
-                if (articleBody[i].tagName === "DIV" && articleBody[i].hasAttribute("data-filename")) {
-                    let filename = articleBody[i].getAttribute("data-filename");
-                    let filenameBlock = articleBody[i].insertAdjacentElement("beforebegin", document.createElement("div"));
-                    filenameBlock.className = "code-filename";
-                    filenameBlock.innerText = filename;
-                    articleBody[i].classList.add("codeblock-margin");
-                    articleBody[i].firstElementChild.style.borderRadius = "0 20px 20px";
-                }
-                // PREの場合codeblock-marginを付与
-                if (articleBody[i].tagName === "PRE") articleBody[i].classList.add("codeblock-margin");
-            }
-
             hljs.highlightAll(); // highlight
         }
 
@@ -113,7 +96,9 @@
                 </section>
                 <section class="widgetgroup">
                     <div class="widgetindex">Tweets</div>
-                    <a class="twitter-timeline" data-height="1000" href="https://twitter.com/QmanEnobikto?ref_src=twsrc%5Etfw">Tweets by QmanEnobikto</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+                    <a class="twitter-timeline" data-height="1000"
+                        href="https://twitter.com/QmanEnobikto?ref_src=twsrc%5Etfw">Tweets by QmanEnobikto</a>
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </section>
             </section>
         </section>
@@ -122,6 +107,24 @@
         <p>当ホームページに記載されている会社名・製品名・システム名などは、各社の登録商標、もしくは商標です。</p>
         <p>© 2022 Kjuman Enobikto All rights reserved.</p>
     </footer>
+    <script>
+        // レンダリング完了後実行する部分
+        const articleBody = document.getElementById("atcbody").children;
+        for (let i = 0; i < articleBody.length; i++) {
+            // DIVかつdata-filename属性を持つ場合、中のPREの前(一番先頭)にファイル名ブロックを追加し、divにcodeblock-marginクラスを付与
+            // 中のCODEのborder-radiusを0 20px 20pxにする
+            if (articleBody[i].tagName === "DIV" && articleBody[i].hasAttribute("data-filename")) {
+                let filename = articleBody[i].getAttribute("data-filename");
+                let filenameBlock = articleBody[i].insertAdjacentElement("beforebegin", document.createElement("div"));
+                filenameBlock.className = "code-filename";
+                filenameBlock.innerText = filename;
+                articleBody[i].classList.add("codeblock-margin");
+                articleBody[i].firstElementChild.style.borderRadius = "0 20px 20px";
+            }
+            // PREの場合codeblock-marginを付与
+            if (articleBody[i].tagName === "PRE") articleBody[i].classList.add("codeblock-margin");
+        }
+    </script>
 </body>
 
 </html>
