--- a/template/preview.html
+++ b/template/preview.html
@@ -115,9 +115,10 @@
             // 中のCODEのborder-radiusを0 20px 20pxにする
             if (articleBody[i].tagName === "DIV" && articleBody[i].hasAttribute("data-filename")) {
                 let filename = articleBody[i].getAttribute("data-filename");
-                let filenameBlock = articleBody[i].insertAdjacentElement("beforebegin", document.createElement("div"));
+                let filenameBlock = document.createElement("div");
                 filenameBlock.className = "code-filename";
                 filenameBlock.innerText = filename;
+                articleBody[i].prepend(filenameBlock);
                 articleBody[i].classList.add("codeblock-margin");
                 articleBody[i].firstElementChild.style.borderRadius = "0 20px 20px";
             }
