--- a/template/preview.html
+++ b/template/preview.html
@@ -38,6 +38,7 @@
                     // DIVかつdata-filename属性を持つ場合、中のPREの前(一番先頭)にファイル名ブロックを追加し、divにcodeblock-marginクラスを付与
                     // 中のCODEのborder-radiusを0 20px 20pxにする
                     if (articleBody[i].tagName === "DIV" && articleBody[i].hasAttribute("data-filename")) {
+                        console.log("find!")
                         let filename = articleBody[i].getAttribute("data-filename");
                         let filenameBlock = document.createElement("div");
                         filenameBlock.className = "code-filename";
