--- a/template/article.html
+++ b/template/article.html
@@ -19,6 +19,7 @@
     <script>hljs.highlightAll();</script>
     <script src="/assets/js/latest_articles.js"></script>
     <script src="/assets/js/categories.js"></script>
+    <script src="/assets/js/codeblock.js"></script>
     <link rel="canonical" href="https://blog.qmainconts.dev/articles/{{.ID}}.html">
     <meta name="description" content="{{$bodyfirst := index .Body 0}}{{trimSample $bodyfirst.Body}}">
     <meta property="og:title" content="{{.Title}} - Qman's Diary">
