--- a/template/preview.html
+++ b/template/preview.html
@@ -45,7 +45,7 @@
                         filenameBlock.innerText = filename;
                         articleBody[i].prepend(filenameBlock);
                         articleBody[i].classList.add("codeblock-margin");
-                        articleBody[i].firstElementChild.style.borderRadius = "0 20px 20px";
+                        articleBody[i].getElementsByTagName("code")[0].style.borderRadius = "0 20px 20px";
                     }
                     // PREの場合codeblock-marginを付与
                     if (articleBody[i].tagName === "PRE") articleBody[i].classList.add("codeblock-margin");
