--- a/template/preview.html
+++ b/template/preview.html
@@ -77,9 +77,13 @@
                     <div class="tag"><a href="#"></a>下書き</div>
                 </div>
                 <article id="atcbody"></article>
-                <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large"
-                    data-lang="ja" data-show-count="false">Tweet</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <div class="widget-wrapper">
+                    <div class="widget-child-wrapper">
+                        <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button"
+                            data-size="large" data-lang="ja" data-show-count="false">Tweet</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </div>
+                </div>
             </section>
             <section class="box">
                 <section class="widgetgroup" id="recent">
