figcaptionと引用のフォント調整

--- a/template/assets/css/common.css
+++ b/template/assets/css/common.css
@@ -58,6 +58,8 @@ hr {
 
 figcaption {
     text-align: center;
+    font-size: 90%;
+    color: #666;
 }
 
 /* 共通利用ボックス */
@@ -290,4 +292,5 @@ blockquote {
     padding: 10px;
     border-left: 4px solid #bbb;
     margin: 10px;
+    color: #666;
 }
