--- a/template/assets/css/article.css
+++ b/template/assets/css/article.css
@@ -110,7 +110,7 @@ th {
 }
 
 .warning {
-    display: block;
+    display: flex;
     background-color: #fbb;
     margin: 10px 0;
     padding: 20px;
@@ -118,7 +118,11 @@ th {
 }
 
 .warning::before {
+    display: block;
     content: url("/assets/warning.svg");
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
 }
 
 
