--- a/template/assets/css/article.css
+++ b/template/assets/css/article.css
@@ -38,6 +38,12 @@
     max-width: 100%;
 }
 
+#maincol article figure img {
+    display: block;
+    margin: 20px auto 10px;
+    max-width: 100%;
+}
+
 pre {
     overflow: auto;
 }
