タグアイコンの高さ調整

--- a/template/assets/css/common.css
+++ b/template/assets/css/common.css
@@ -182,6 +182,9 @@ figcaption {
 
 .tags .tag:first-child {
     background-color: #dddddd;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .tagcnt {
