--- a/template/article.html
+++ b/template/article.html
@@ -37,7 +37,7 @@
     <main>
         <section id="maincol">
             <section class="box">
-                <div class="date">{{formatTime .PublishedAt}}{{if ne .PublishedAt .UpdatedAt}} ({{formatTime .UpdatedAt}} 更新){{end}}</div>
+                <div class="date">{{formatTime .PublishedAt}}{{if ne (formatTime .PublishedAt) (formatTime .UpdatedAt)}} ({{formatTime .UpdatedAt}} 更新){{end}}</div>
                 <h1 id="articletitle">{{.Title}}</h1>
                 <div class="tags">
                     <div class="tag"><img src="/assets/tag.svg" alt="タグ" width="18" height="18"></div>{{range
