--- a/template/article.html
+++ b/template/article.html
@@ -40,7 +40,7 @@
                 <div class="date">{{formatTime .PublishedAt}}{{if ne (formatTime .PublishedAt) (formatTime .UpdatedAt)}} ({{formatTime .UpdatedAt}} 更新){{end}}</div>
                 <h1 id="articletitle">{{.Title}}</h1>
                 <div class="tags">
-                    <div class="tag"><img src="/assets/tag.svg" alt="タグ" width="18" height="18"></div>{{range
+                    <div class="tag"><img src="/assets/tag.svg" alt="タグ" width="18" height="18" draggable="false"></div>{{range
                     .Category}}
                     <div class="tag"><a href="category/{{.ID}}"></a>{{.Name}}</div>{{end}}
                 </div>
