--- a/template/index.html
+++ b/template/index.html
@@ -36,7 +36,7 @@
                     <div class="date">{{formatTime .PublishedAt}}</div>
                     <div class="title"><a href="/articles/{{.ID}}.html">{{.Title}}</a></div>
                     <div class="tags">
-                        <div class="tag"><img src="/assets/tag.svg" alt="タグ" width="18" height="18"></div>{{range
+                        <div class="tag"><img src="/assets/tag.svg" alt="タグ" width="18" height="18" draggable="false"></div>{{range
                         .Category}}
                         <div class="tag"><a href="/articles/category/{{.ID}}"></a>{{.Name}}</div>{{end}}
                     </div>{{$bodyfirst := index .Body 0}}{{trimSample $bodyfirst.Body}}
