--- a/template/preview.html
+++ b/template/preview.html
@@ -73,7 +73,7 @@
                 <div class="date" id="prev_date"></div>
                 <h1 id="articletitle"></h1>
                 <div class="tags" id="prev_tags">
-                    <div class="tag"><img src="/assets/tag.svg" alt="タグ" width="18" height="18"></div>
+                    <div class="tag"><img src="/assets/tag.svg" alt="タグ" width="18" height="18" draggable="false"></div>
                     <div class="tag"><a href="#"></a>下書き</div>
                 </div>
                 <article id="atcbody"></article>
