--- a/template/article.html
+++ b/template/article.html
@@ -29,22 +29,30 @@
 </head>
 
 <body>
-    <header>
-        <div id="blogtitle"><a href="/">Qman's Diary</a></div>
-        <p>多趣味人間の備忘録</p>
-    </header>
+    {{- template "header" . -}}
     <main>
         <section id="maincol">
             <section class="box">
-                <div class="date">{{formatTime .PublishedAt}}{{if ne (formatTime .PublishedAt) (formatTime .UpdatedAt)}} ({{formatTime .UpdatedAt}} 更新){{end}}</div>
-                <h1 id="articletitle">{{.Title}}</h1>
+                <div class="date">
+                    {{- formatTime .PublishedAt -}}
+                    {{- if ne (formatTime .PublishedAt) (formatTime .UpdatedAt) -}} 
+                    ({{formatTime .UpdatedAt}} 更新)
+                    {{- end -}}</div>
+                <h1 id="articletitle">{{- .Title -}}</h1>
                 <div class="tags">
-                    <div class="tag"><img src="/assets/tag.svg" alt="タグ" width="18" height="18" draggable="false"></div>{{range
-                    .Category}}
-                    <div class="tag"><a href="category/{{.ID}}"></a>{{.Name}}</div>{{end}}
+                    <div class="tag"><img src="/assets/tag.svg" alt="タグ" width="18" height="18" draggable="false"></div>
+                    {{- range .Category -}}
+                    <div class="tag"><a href="category/{{.ID}}"></a>
+                        {{- .Name -}}
+                    </div>
+                    {{- end -}}
                 </div>
                 <div id="time-course-warning"></div>
-                <article id="atcbody">{{range $bodies := .Body}}{{replaceWebp $bodies.Body}}{{end}}</article>
+                <article id="atcbody">
+                    {{- range $bodies := .Body -}}
+                    {{- replaceWebp $bodies.Body -}}
+                    {{- end -}}
+                </article>
                 <div class="widget-wrapper">
                     <div class="widget-child-wrapper">
                         <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button"
@@ -60,40 +68,7 @@
                 </section>
             </section>
         </section>
-        <section id="subcol">
-            <section class="box">
-                <div class="subcolbtn">
-                    <a href="https://qmainconts.dev/"></a>
-                    >> キューマンのコンテンツ置き場
-                </div>
-                <section class="widgetgroup">
-                    <div class="widgetindex">Profile</div>
-                    <p>オタクコンテンツで命を繋いでいる</p>
-                </section>
-                <section class="widgetgroup">
-                    <div class="widgetindex">Accounts</div>
-                    <ul>
-                        <li>Twitter: <a href="https://twitter.com/QmanEnobikto" target="_blank">@QmanEnobikto</a>
-                        </li>
-                        <li>GitHub: <a href="https://github.com/Qman11010101" target="_blank">Qman11010101</a></li>
-                        <li>カクヨム: <a href="https://kakuyomu.jp/users/QmanEnobikto" target="_blank">QmanEnobikto</a>
-                        </li>
-                        <li>Qiita: <a href="https://qiita.com/KjumanEnobikto" target="_blank">@KjumanEnobikto</a>
-                        </li>
-                        <li>Zenn: <a href="https://zenn.dev/kjumanenobikto" target="_blank">@kjumanenobikto</a></li>
-                    </ul>
-                </section>
-                <section class="widgetgroup">
-                    <div class="widgetindex">Category</div>
-                    <div id="categorydisplay">
-                    </div>
-                </section>
-                <section class="widgetgroup">
-                    <div class="widgetindex">Tweets</div>
-                    <a class="twitter-timeline" data-height="1000" href="https://twitter.com/QmanEnobikto?ref_src=twsrc%5Etfw">Tweets by QmanEnobikto</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
-                </section>
-            </section>
-        </section>
+        {{- template "subcol" . -}}
     </main>
     <footer>
         <p>当ホームページに記載されている会社名・製品名・システム名などは、各社の登録商標、もしくは商標です。</p>
