--- a/template/index.html
+++ b/template/index.html
@@ -29,24 +29,38 @@
     </header>
     <main>
         <section id="maincol">
-            <section class="box">{{range .Articles}}
+            <section class="box">
+                {{- range .Articles -}}
                 <div class="article">
-                    <div class="date">{{formatTime .PublishedAt}}</div>
-                    <div class="title"><a href="/articles/{{.ID}}.html">{{.Title}}</a></div>
+                    <div class="date">{{- formatTime .PublishedAt -}}</div>
+                    <div class="title"><a href="/articles/{{.ID}}.html">{{- .Title -}}</a></div>
                     <div class="tags">
-                        <div class="tag"><img src="/assets/tag.svg" alt="タグ" width="18" height="18" draggable="false"></div>{{range
-                        .Category}}
-                        <div class="tag"><a href="/articles/category/{{.ID}}"></a>{{.Name}}</div>{{end}}
-                    </div>{{$bodyfirst := index .Body 0}}{{trimSample $bodyfirst.Body}}
-                </div>{{end}}{{if totalGreater .Totalcount .Limit}}
-                <div class="prev_next_index">{{if isNotFirst .Offset}}<div id="prev" class="prev_next_btn">
+                        <div class="tag"><img src="/assets/tag.svg" alt="タグ" width="18" height="18" draggable="false"></div>
+                        {{- range .Category -}}
+                        <div class="tag"><a href="/articles/category/{{.ID}}"></a>
+                            {{- .Name -}}
+                        </div>
+                        {{- end -}}
+                    </div>
+                    {{- $bodyfirst := index .Body 0 -}}{{- trimSample $bodyfirst.Body -}}
+                </div>
+                {{- end -}}
+                {{- if totalGreater .Totalcount .Limit -}}
+                <div class="prev_next_index">
+                    {{- if isNotFirst .Offset -}}
+                    <div id="prev" class="prev_next_btn">
                         <a href="{{if eq .PrevPage 1}}{{.Root}}{{else}}{{.Root}}page/{{.PrevPage}}{{end}}"></a>← Previous
-                    </div>{{end}}<div class="page_view">
+                    </div>
+                    {{- end -}}
+                    <div class="page_view">
                         Page {{sub .NextPage 1}} / {{.AllPage}}
-                    </div>{{if isNotLast .Limit .Offset .Totalcount}}<div id="next" class="prev_next_btn">
+                    </div>{{- if isNotLast .Limit .Offset .Totalcount -}}
+                    <div id="next" class="prev_next_btn">
                         <a href="{{.Root}}page/{{.NextPage}}"></a>Next →
-                    </div>{{end}}
-                </div>{{end}}
+                    </div>
+                    {{- end -}}
+                </div>
+                {{- end -}}
             </section>
             <section class="box">
                 <section class="widgetgroup" id="recent">
@@ -55,36 +69,7 @@
                 </section>
             </section>
         </section>
-        <section id="subcol">
-            <section class="box">
-                <div class="subcolbtn">
-                    <a href="https://qmainconts.dev/"></a>
-                    >> キューマンのコンテンツ置き場
-                </div>
-                <section class="widgetgroup">
-                    <div class="widgetindex">Profile</div>
-                    <p>オタクコンテンツで命を繋いでいる</p>
-                </section>
-                <section class="widgetgroup">
-                    <div class="widgetindex">Accounts</div>
-                    <ul>
-                        <li>Twitter: <a href="https://twitter.com/QmanEnobikto" target="_blank">@QmanEnobikto</a></li>
-                        <li>GitHub: <a href="https://github.com/Qman11010101" target="_blank">Qman11010101</a></li>
-                        <li>カクヨム: <a href="https://kakuyomu.jp/users/QmanEnobikto" target="_blank">QmanEnobikto</a></li>
-                        <li>Qiita: <a href="https://qiita.com/KjumanEnobikto" target="_blank">@KjumanEnobikto</a></li>
-                        <li>Zenn: <a href="https://zenn.dev/kjumanenobikto" target="_blank">@kjumanenobikto</a></li>
-                    </ul>
-                </section>
-                <section class="widgetgroup">
-                    <div class="widgetindex">Category</div>
-                    <div id="categorydisplay"></div>
-                </section>
-                <section class="widgetgroup">
-                    <div class="widgetindex">Tweets</div>
-                    <a class="twitter-timeline" data-height="1000" href="https://twitter.com/QmanEnobikto?ref_src=twsrc%5Etfw">Tweets by QmanEnobikto</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
-                </section>
-            </section>
-        </section>
+        {{- template "subcol" . -}}
     </main>
     <footer>
         <p>当ホームページに記載されている会社名・製品名・システム名などは、各社の登録商標、もしくは商標です。</p>
