--- a/template/components/subcol.html
+++ b/template/components/subcol.html
@@ -1,16 +1,16 @@
 {{ define "subcol" }}
 <section id="subcol">
-    <section class="box">
+    <div class="box">
         <div class="subcolbtn">
             <a href="https://qmainconts.dev/"></a>
             >> キューマンのコンテンツ置き場
         </div>
         <section class="widgetgroup">
-            <div class="widgetindex">Profile</div>
+            <h3 class="widgetindex">Profile</h3>
             <p>オタクコンテンツで命を繋いでいる人間</p>
         </section>
         <section class="widgetgroup">
-            <div class="widgetindex">Accounts</div>
+            <h3 class="widgetindex">Accounts</h3>
             <ul>
                 <li>Twitter: <a href="https://twitter.com/QmanEnobikto" target="_blank">@QmanEnobikto</a>
                 </li>
@@ -23,14 +23,10 @@
             </ul>
         </section>
         <section class="widgetgroup">
-            <div class="widgetindex">Category</div>
+            <h3 class="widgetindex">Category</h3>
             <div id="categorydisplay">
             </div>
         </section>
-        <section class="widgetgroup">
-            <div class="widgetindex">Tweets</div>
-            <a class="twitter-timeline" data-height="1000" href="https://twitter.com/QmanEnobikto?ref_src=twsrc%5Etfw">Tweets by QmanEnobikto</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
-        </section>
-    </section>
+    </div>
 </section>
 {{ end }}
