--- a/template/assets/css/article.css
+++ b/template/assets/css/article.css
@@ -20,34 +20,34 @@
 
 #maincol article {
     margin: 15px 0;
-}
 
-#maincol article p {
-    margin: 10px 0;
-}
+    p {
+        margin: 20px 0;
+    }
 
-#maincol h2 {
-    font-size: 1.5em;
-    margin: 30px 0 10px;
-}
+    h2 {
+        font-size: 1.5em;
+        margin: 30px 0 10px;
+    }
 
-#maincol h3 {
-    font-size: 1.2em;
-    margin: 20px 0 5px;
-}
+    h3 {
+        font-size: 1.2em;
+        margin: 20px 0 5px;
+    }
 
-#maincol article img {
-    display: block;
-    margin: 20px auto;
-    max-width: 100%;
-    height: auto;
-}
+    img {
+        display: block;
+        margin: 20px auto;
+        max-width: 100%;
+        height: auto;
+    }
 
-#maincol article figure img {
-    display: block;
-    margin: 20px auto 10px;
-    max-width: 100%;
-    height: auto;
+    figure img {
+        display: block;
+        margin: 20px auto 10px;
+        max-width: 100%;
+        height: auto;
+    }
 }
 
 .code-filename {
@@ -128,12 +128,11 @@ th {
     padding: 0 5px 2px;
     transition-duration: .2s;
     user-select: none;
-}
 
-.spoiler:hover,
-.spoiler:active {
-    color: #eee;
-    transition-duration: .2s;
+    &:hover, &:active {
+        color: #eee;
+        transition-duration: .2s;
+    }
 }
 
 /* information-block */
