--- a/template/assets/css/index.css
+++ b/template/assets/css/index.css
@@ -12,18 +12,18 @@
     font-size: 1.5em;
     font-weight: bold;
     margin: 7px 0;
-}
 
-.title a {
-    text-decoration: none;
-    color: #333333;
-    cursor: pointer;
-    transition-duration: .2s;
-}
+    a {
+        text-decoration: none;
+        color: #333333;
+        cursor: pointer;
+        transition-duration: .2s;
 
-.title a:hover {
-    color: #0088cc;
-    transition-duration: .2s;
+        &:hover {
+            color: #0088cc;
+            transition-duration: .2s;
+        }
+    }
 }
 
 /* prev/nextボタン */
@@ -41,21 +41,21 @@
     color: #333;
     border-radius: 8px;
     width: fit-content;
-}
 
-.prev_next_btn:hover {
-    background-color: #555555;
-    color: #bbbbbb;
-    transition-duration: .2s;
-}
+    &:hover {
+        background-color: #555555;
+        color: #bbbbbb;
+        transition-duration: .2s;
+    }
 
-.prev_next_btn a {
-    position: absolute;
-    display: block;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    a {
+        position: absolute;
+        display: block;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 #prev {
