--- a/template/404.html
+++ b/template/404.html
@@ -19,6 +19,7 @@
     <meta property="og:url" content="https://blog.qmainconts.dev/404.html">
     <meta property="og:type" content="article">
     <meta property="og:site_name" content="Qman's Diary">
+    <meta name="google-site-verification" content="u0BTjFYkL3nKuJ0DyWuKngSx29oQe4lkzcAgTFfP2bQ" />
 </head>
 
 <body>
