--- a/template/index.html
+++ b/template/index.html
@@ -20,6 +20,7 @@
     <meta property="og:url" content="https://blog.qmainconts.dev{{if eq .PrevPage 0}}{{.Root}}{{else}}{{.Root}}page/{{sub .NextPage 1}}{{end}}">
     <meta property="og:type" content="blog">
     <meta property="og:site_name" content="Qman's Diary">
+    <meta name="google-site-verification" content="u0BTjFYkL3nKuJ0DyWuKngSx29oQe4lkzcAgTFfP2bQ" />
 </head>
 
 <body>
