--- a/template/components/subcol.html
+++ b/template/components/subcol.html
@@ -12,14 +12,14 @@
         <section class="widgetgroup">
             <h3 class="widgetindex">Accounts</h3>
             <ul>
-                <li>Twitter: <a href="https://twitter.com/QmanEnobikto" target="_blank">@QmanEnobikto</a>
+                <li>X: <a href="https://x.com/QmanEnobikto" target="_blank">@QmanEnobikto</a>
                 </li>
                 <li>GitHub: <a href="https://github.com/Qman11010101" target="_blank">Qman11010101</a></li>
-                <li>カクヨム: <a href="https://kakuyomu.jp/users/QmanEnobikto" target="_blank">QmanEnobikto</a>
-                </li>
                 <li>Qiita: <a href="https://qiita.com/KjumanEnobikto" target="_blank">@KjumanEnobikto</a>
                 </li>
                 <li>Zenn: <a href="https://zenn.dev/kjumanenobikto" target="_blank">@kjumanenobikto</a></li>
+                <li>カクヨム: <a href="https://kakuyomu.jp/users/QmanEnobikto" target="_blank">QmanEnobikto</a>
+                </li>
             </ul>
         </section>
         <section class="widgetgroup">
