--- a/template/assets/css/index.css
+++ b/template/assets/css/index.css
@@ -9,7 +9,7 @@
 }
 
 .title {
-    font-size: 1.5em;
+    font-size: 1.5rem;
     font-weight: bold;
     margin: 7px 0;
 
@@ -71,5 +71,5 @@
 .page_view {
     margin: 0 auto;
     width: fit-content;
-    font-size: 1.2em;
+    font-size: 1.2rem;
 }
