--- a/template/index.html
+++ b/template/index.html
@@ -45,7 +45,7 @@
                         </div>
                         {{- end -}}
                     </div>
-                    {{- $bodyfirst := index .Body 0 -}}{{- trimSample $bodyfirst.Body -}}
+                    <p class="article-preview">{{- $bodyfirst := index .Body 0 -}}{{- trimSample $bodyfirst.Body -}}</p>
                 </div>
                 {{- end -}}
                 {{- if totalGreater .Totalcount .Limit -}}
