--- a/template/404.html
+++ b/template/404.html
@@ -55,40 +55,42 @@
                     お探しのページは見つかりませんでした。
                 </article>
             </section>
+            <section class="box">
+                <section class="widgetgroup" id="recent">
+                    <div class="widgetindex">Recent Articles</div>
+                    <div id="recent-articles"></div>
+                </section>
+            </section>
         </section>
         <section id="subcol">
-            <section class="box">
+            <div class="box">
                 <div class="subcolbtn">
                     <a href="https://qmainconts.dev/"></a>
                     >> キューマンのコンテンツ置き場
                 </div>
                 <section class="widgetgroup">
-                    <div class="widgetindex">Profile</div>
-                    <p>オタクコンテンツで命を繋いでいる</p>
+                    <h3 class="widgetindex">Profile</h3>
+                    <p>オタクコンテンツで命を繋いでいる人間</p>
                 </section>
                 <section class="widgetgroup">
-                    <div class="widgetindex">Accounts</div>
+                    <h3 class="widgetindex">Accounts</h3>
                     <ul>
-                        <li>Twitter: <a href="https://twitter.com/QmanEnobikto" target="_blank">@QmanEnobikto</a>
+                        <li>X: <a href="https://x.com/QmanEnobikto" target="_blank">@QmanEnobikto</a>
                         </li>
-                        <li>GitHub: <a href="https://github.com/Qman11010101" target="_blank">Qman110101</a></li>
-                        <li>カクヨム: <a href="https://kakuyomu.jp/users/QmanEnobikto" target="_blank">QmanEnobikto</a>
-                        </li>
+                        <li>GitHub: <a href="https://github.com/Qman11010101" target="_blank">Qman11010101</a></li>
                         <li>Qiita: <a href="https://qiita.com/KjumanEnobikto" target="_blank">@KjumanEnobikto</a>
                         </li>
                         <li>Zenn: <a href="https://zenn.dev/kjumanenobikto" target="_blank">@kjumanenobikto</a></li>
+                        <li>カクヨム: <a href="https://kakuyomu.jp/users/QmanEnobikto" target="_blank">QmanEnobikto</a>
+                        </li>
                     </ul>
                 </section>
-                <section class="widgetgroup" id="recent">
-                    <div class="widgetindex">Recent Articles</div>
-                    <div id="recent-articles"></div>
-                </section>
                 <section class="widgetgroup">
-                    <div class="widgetindex">Category</div>
+                    <h3 class="widgetindex">Category</h3>
                     <div id="categorydisplay">
                     </div>
                 </section>
-            </section>
+            </div>
         </section>
     </main>
     <footer>
